docs/v7.1.2/classes/E41.md
---
layout: page
title: E41 Appellation
titleEn: E41 Appellation - Appellation
permalink: /v7.1.2/classes/E41
sidebar: v712
group: classes
date: 2023-12-22
---

**Date de création** : 2023-11-08

**Dernière mise à jour** : 2023-12-22

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><p><strong>Sous-classe de</strong></p></td>
<td class="en">
<p>E90 Symbolic Object</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E90_Objet_symbolique</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Super-classe de</strong></p></td>
<td class="en">
<p>E35 Title</p>
<p>E42 Identifier</p>
<p>E61 Time Primitive</p>
<p>E94 Space Primitive<strong></strong></p>
<p>E95 Spacetime Primitive</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E35_Titre</code></p>
<p><code class="language-plaintext highlighter-rouge">E42_Identifiant</code> </p>
<p><code class="language-plaintext highlighter-rouge">E61_Primitive_temporelle</code> </p>
<p><code class="language-plaintext highlighter-rouge">E94_Primitive_spatiale</code> </p>
<p><code class="language-plaintext highlighter-rouge">E95_Primitive_spatio-temporelle</code> </p>
</td>
</tr>
<tr>
<td><p><strong>Note d’application</strong></p></td>
<td class="en">
<p>This class comprises signs, either meaningful or not, or arrangements of signs following a specific syntax, that are used or can be used to refer to and identify a specific instance of some class or category within a certain context.</p>
<p>Instances of E41 Appellation do not identify things by their meaning, even if they happen to have one, but instead by convention, tradition, or agreement. Instances of E41 Appellation are cultural constructs; as such, they have a context, a history, and a use in time and space by some group of users. A given instance of E41 Appellation can have alternative forms, i.e., other instances of E41 Appellation that are always regarded as equivalent independent from the thing it denotes.<strong></strong></p>
<p>Different languages may use different appellations for the same thing, such as the names of major cities. Some appellations may be formulated using a valid noun phrase of a particular language. In these cases, the respective instances of E41 Appellation should also be declared as instances of E33 Linguistic Object. Then the language using the appellation can be declared with the property <em>P72 has language</em>: E56 Language.<strong></strong></p>
<p>Instances of E41 Appellation may be used to identify any instance of E1 CRM Entity and sometimes are characteristic for instances of more specific subclasses E1 CRM Entity, such as for instances of E52 Time-Span (for instance “dates”), E39 Actor, E53 Place or E28 Conceptual Object. Postal addresses and E-mail addresses are characteristic examples of identifiers used by services transporting things between clients.<strong></strong></p>
<p>Even numerically expressed identifiers for extents in space or time are also regarded as instances of E41 Appellation, such as Gregorian dates or spatial coordinates, even though they allow for determining some time or location by a known procedure starting from a reference point and by virtue of that fact play a double role as instances of E59 Primitive Value.<strong></strong></p>
<p>E41 Appellation should not be confused with the act of naming something. Cf. E15 Identifier Assignment</p>
</td>
<td>
<p>Cette classe comprend les signes, qu’ils soient porteurs ou non de sens, ou les arrangements de signes qui suivent une syntaxe particulière et qui sont ou peuvent être utilisés pour désigner et identifier une instance spécifique d’une classe ou d’une catégorie dans un contexte donné.</p>
<p>Les instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> n’identifient pas les choses par leur sens, même si elles en ont un, mais plutôt par convention, tradition ou accord. Les instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> sont des constructions culturelles. Comme telles, elles possèdent un contexte, une histoire et un usage dans le temps et dans l’espace par un groupe d’utilisateurs. Une instance donnée de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> peut avoir des formes alternatives, c.-à-d. d’autres instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> qui sont toujours considérées comme équivalentes indépendamment de la chose qu’elle dénote.</p>
<p>Différentes langues peuvent employer différentes appellations pour référer à la même chose. [n.d.t. C’est le cas pour] le nom des grandes villes. Certaines appellations peuvent être formulées à l'aide d'un syntagme nominal valide dans une langue particulière. Dans ces cas, les instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> doivent également être déclarées comme des instances de <code class="language-plaintext highlighter-rouge">E33_Objet_linguistique</code>. Ensuite, la langue utilisant l’appellation peut être déclarée avec la propriété <code class="language-plaintext highlighter-rouge">P72_a_pour_langue (est_la_langue_de)</code> : <code class="language-plaintext highlighter-rouge">E56_Langue</code>. </p>
<p>Les instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> peuvent être utilisées pour identifier toute instance de <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code>. Elles sont parfois caractéristiques des instances de certaines sous-classes plus spécifiques de <code class="language-plaintext highlighter-rouge">E1_Entité_CRM</code>. C’est le cas des instances de <code class="language-plaintext highlighter-rouge">E52_Intervalle_temporel</code> (par exemple « dates »), <code class="language-plaintext highlighter-rouge">E39_Actant</code>, <code class="language-plaintext highlighter-rouge">E53_Lieu</code> ou <code class="language-plaintext highlighter-rouge">E28_Objet_conceptuel</code>. Les adresses postales et les adresses courriel sont des exemples caractéristiques d’identifiants utilisés par des services acheminant des choses entre des clients.</p>
<p>Même les identifiants exprimés numériquement pour désigner des étendues spatiales ou temporelles, telles que les dates du calendrier grégorien ou les coordonnées spatiales, sont considérés comme des instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code>, et ce, même s'ils permettent de déterminer un temps ou un lieu par une procédure connue à partir d'un point de référence, jouant ainsi un double rôle comme instance de <code class="language-plaintext highlighter-rouge">E41_Appellation et</code> <code class="language-plaintext highlighter-rouge">E59_Valeur_primitive</code>. </p>
<p>Les instances de <code class="language-plaintext highlighter-rouge">E41_Appellation</code> ne doivent pas être confondues avec l’acte de nommer quelque chose. Se reporter à <code class="language-plaintext highlighter-rouge">E15_Assignation_d'identifiant</code>.</p>
</td>
</tr>
<tr>
<td><p><strong>Exemples</strong></p></td>
<td class="en">
<ul>
<li><p>"Martin"<strong></strong></p>
</li>
<li><p>“Aquæ Sulis Minerva”<strong></strong></p>
</li>
<li><p>"the Merchant of Venice" (E35) (McCullough, 2005)<strong></strong></p>
</li>
<li><p>"Spigelia marilandica (L.) L." [not the species, just the name] (Hershberger, Robacker and Jenkins, 2015)<strong></strong></p>
</li>
<li><p>"information science" [not the science itself, but the name through which we refer to it in an English-speaking context]<strong></strong></p>
</li>
<li><p>“安” [Chinese “an”, meaning “peace”]<strong></strong></p>
</li>
<li><p>“6°5’29”N 45°12’13”W” [example of a spatial coordinate]<strong></strong></p>
</li>
<li><p>“Black queen’s bishop 4” [chess coordinate, example of an identifier in a conceptual space (E89)]<strong></strong></p>
</li>
<li><p>“19-MAR-1922” [example of date]<strong></strong></p>
</li>
<li><p>“+41 22 418 5571” [example of contact point]<strong></strong></p>
</li>
<li><p>"weasel@paveprime.com" [example of contact point]<strong></strong></p>
</li>
<li><p>“CH-1211, Genève” [example of place appellation]<strong></strong></p>
</li>
<li><p>“1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan” [example of a postal address]</p>
</li>
<li><p>“the poop deck of H.M.S Victory” [example of a section definition on a human-made object (E22)]<strong></strong></p>
</li>
<li><p>“the Venus de Milo’s left buttock” [example of a section definition on a human-made object (E22)]<strong></strong></p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>« Martin »<strong></strong></p>
</li>
<li><p>« Aquæ Sulis Minerva »<strong></strong></p>
</li>
<li><p>« Le Marchand de Venise » (<code class="language-plaintext highlighter-rouge">E35_Titre</code>) (McCullough, 2005)<strong></strong></p>
</li>
<li><p>« Spigelia marilandica (L.) L. » [pas l’espèce, juste son nom] (Hershberger, Robacker & Jenkins, 2015)<strong></strong></p>
</li>
<li><p>« Science de l’information » [pas la science elle-même, mais le nom par lequel on s’y réfère dans un contexte francophone]<strong></strong></p>
</li>
<li><p>« 安 » [[n.d.t. Sinogramme et kanji] chinois. [n.d.t. En transcription hanyu pinyin],  « An » veut dire « paix »]<sup>1</sup><strong></strong></p>
</li>
<li><p>« 6°5’29”N 45°12’13”O » [exemple d'une coordonnée géographique]<strong></strong></p>
</li>
<li><p>« Le fou de la reine noire en g4 » [une coordonnée aux échecs, un exemple de coordonnée spatiale dans un espace conceptuel (<code class="language-plaintext highlighter-rouge">E89_Objet_propositionnel</code>)]<strong></strong></p>
</li>
<li><p>« 19-MAR-1922 » [exemple de date]</p>
</li>
<li><p>« +41 22 418 5571 » [exemple de point de contact]<strong></strong></p>
</li>
<li><p>« weasel@paveprime.com » [exemple de point de contact]<strong></strong></p>
</li>
<li><p>« CH-1211, Genève » [exemple d’appellation de lieu]<strong></strong></p>
</li>
<li><p>« 1-29-3 Otsuka, Bunkyo-ku, Tokyo, 121, Japan » [exemple d’adresse postale]</p>
</li>
<li><p>« la dunette du HMS Victory » [exemple de définition d’une section sur un objet élaboré par l'humain (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>)]<strong></strong></p>
</li>
<li><p>« la fesse gauche de la Vénus de Milo » [exemple de définition d’une section sur un objet élaboré par l'humain (<code class="language-plaintext highlighter-rouge">E22_Objet_élaboré_par_l’humain</code>)]<strong></strong></p>
</li>
</ul>
</td>
</tr>
<tr>
<td><p><strong>Logique</strong></p></td>
<td class="en">
<p>E41(x) ⇒ E90(x)</p>
</td>
<td>
<p>E41(x) ⇒ E90(x)</p>
</td>
</tr>
<tr>
<td><p><strong>Propriétés</strong></p></td>
<td class="en">
<p>P139 has alternative form (is alternative form of): E41 Appellation</p>
<p>(P139.1 has type: E55 Type)</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">P139_a_pour_forme_alternative (est_la_forme_alternative_de)</code> : <code class="language-plaintext highlighter-rouge">E41_Appellation</code> </p>
<p>(<code class="language-plaintext highlighter-rouge">P139.1_a_pour_type</code> : <code class="language-plaintext highlighter-rouge">E55_Type</code>)</p>
</td>
</tr>
<tr>
<td><p><strong><em>Note de traduction</em></strong></p></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><p><strong><em>Références</em></strong></p></td>
<td colspan="2">
<p>Wikipédia. « 安 ». Dans <em>Wikipédia</em>. San Francisco, US-CA: Wikipédia, 21 octobre 2020.<a href="https://fr.wikipedia.org/w/index.php?title=%E5%AE%89"><span class="underline"> </span></a><a href="https://fr.wikipedia.org/w/index.php?title=%E5%AE%89"><span class="underline">https://fr.wikipedia.org/w/index.php?title=%E5%AE%89</span></a>.</p>
</td>
</tr>
</tbody>
</table>
